// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTML endpoint accepts POSTed markdown 1`] = `"<h3 id=\\"foo\\">foo<a aria-hidden=\\"true\\" tabindex=\\"-1\\" href=\\"#foo\\"><span class=\\"icon icon-link\\"></span></a></h3>"`;

exports[`HTML endpoint can enforce shifting level 1`] = `
"<h2 id=\\"i-have-seen-a-dolphin\\">I have seen a dolphin<a aria-hidden=\\"true\\" tabindex=\\"-1\\" href=\\"#i-have-seen-a-dolphin\\"><span class=\\"icon icon-link\\"></span></a></h2>
<p>On a camera. What is happening with animals these days?\\"</p>"
`;

exports[`HTML endpoint correctly renders manifest 1`] = `
Object {
  "children": Array [
    Object {
      "text": "<p>On a balcony in summer air</p>",
    },
    Object {
      "text": "<p>Escape this town for a little while</p>",
    },
    Object {
      "text": "<p>Marry me, Juliet, you’ll never have to be alone</p>",
    },
  ],
  "conclusion": "<p>Just say \\"Yes\\"</p>",
  "title": "<h1 id=\\"a-story\\">A story<a aria-hidden=\\"true\\" tabindex=\\"-1\\" href=\\"#a-story\\"><span class=\\"icon icon-link\\"></span></a></h1>",
}
`;

exports[`HTML endpoint produces statistics when configured 1`] = `
"<p>7 chars</p>
<h3 id=\\"13-chars-here\\">13 chars here<a aria-hidden=\\"true\\" tabindex=\\"-1\\" href=\\"#13-chars-here\\"><span class=\\"icon icon-link\\"></span></a></h3>
<p><a href=\\"https.//github.com/zestedesavoir/zmarkdown\\">13 chars here</a></p>
<figure><img src=\\"https.//github.com/zestedesavoir/zmarkdown\\" alt=\\"13 chars here\\"><figcaption>13 chars here</figcaption></figure>
<figure><img src=\\"https.//github.com/zestedesavoir/zmarkdown\\" alt=\\"no chars here\\"><figcaption>13 chars here</figcaption></figure>"
`;

exports[`LaTeX endpoint accepts POSTed markdown 1`] = `
"\\\\levelOneTitle{foo}
"
`;

exports[`LaTeX endpoint correctly renders manifest 1`] = `
Object {
  "children": Array [
    Object {
      "text": "I’m standing there

",
    },
    Object {
      "text": "And I was crying on the staircase

",
    },
    Object {
      "text": "I got tired of waiting

",
    },
  ],
  "conclusion": "\\\\begin{LevelOneConclusion}
Just say \\"Yes\\"
\\\\end{LevelOneConclusion}

",
  "title": "\\\\levelOneTitle{Another story}
",
}
`;

exports[`Texfile endpoint accepts POSTed markdown 1`] = `
"\\\\documentclass[contentType]{zmdocument}

\\\\usepackage{blindtext}
\\\\title{The Title}
\\\\author{FØØ, Bär}
\\\\licence[/tmp/l/by-nc-sa.svg]{CC-BY-NC-SA}{https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode}

\\\\smileysPath{/tmp/s}
\\\\makeglossaries

\\\\begin{document}
\\\\maketitle
\\\\tableofcontents

\\\\levelOneTitle{foo}

\\\\end{document}"
`;

exports[`Texfile endpoint allows date 1`] = `
"\\\\documentclass[contentType]{zmdocument}

\\\\usepackage{blindtext}
\\\\title{The Title}
\\\\author{FØØ, Bär}
\\\\licence[/tmp/l/by-nc-sa.svg]{CC-BY-NC-SA}{https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode}
\\\\date{2 mai 1998}
\\\\smileysPath{/tmp/s}
\\\\makeglossaries

\\\\begin{document}
\\\\maketitle
\\\\tableofcontents

\\\\levelOneTitle{foo}

\\\\end{document}"
`;

exports[`Texfile endpoint allows extra arguments 1`] = `
"\\\\documentclass[contentType]{zmdocument}

\\\\usepackage{blindtext}
\\\\title{The Title}
\\\\author{FØØ, Bär}
\\\\licence[/tmp/l/by-nc-sa.svg]{CC-BY-NC-SA}{https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode}
\\\\logo{/tmp/logo/h2g2.png}
\\\\editorLogo{/tmp/logo/pmm.jpg}
\\\\tutoLink{https://en.wikipedia.org/wiki/The_Hitchhiker%27s_Guide_to_the_Galaxy_(novel)}
\\\\editor{https://www.panmacmillan.com/}
\\\\smileysPath{/tmp/s}
\\\\makeglossaries

\\\\begin{document}
\\\\maketitle
\\\\tableofcontents

\\\\levelOneTitle{foo}

\\\\end{document}"
`;

exports[`Texfile endpoint correctly renders introduction & conclusion 1`] = `
"\\\\documentclass[contentType]{zmdocument}

\\\\usepackage{blindtext}
\\\\title{The Title}
\\\\author{FØØ, Bär}
\\\\licence[/tmp/l/by-nc-sa.svg]{CC-BY-NC-SA}{https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode}

\\\\smileysPath{/tmp/s}
\\\\makeglossaries

\\\\begin{document}
\\\\maketitle
\\\\tableofcontents

\\\\levelOneTitle{My content™}

\\\\begin{LevelOneIntroduction}
Here I introduce My content™
\\\\end{LevelOneIntroduction}


\\\\begin{LevelThreeIntroduction}
Here I introduce My section™
\\\\end{LevelThreeIntroduction}


\\\\begin{LevelThreeConclusion}
Here I conclude My section™
\\\\end{LevelThreeConclusion}


\\\\begin{LevelOneConclusion}
Here I conclude My content™
\\\\end{LevelOneConclusion}


\\\\end{document}"
`;

exports[`Texfile endpoint escapes title and author 1`] = `
"\\\\documentclass[contentType]{zmdocument}

\\\\usepackage{blindtext}
\\\\title{recap \\\\#1}
\\\\author{titi\\\\_alone}
\\\\licence[/tmp/l/by-nc-sa.svg]{CC-BY-NC-SA}{https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode}

\\\\smileysPath{/tmp/s}
\\\\makeglossaries

\\\\begin{document}
\\\\maketitle
\\\\tableofcontents

\\\\levelOneTitle{foo}

\\\\end{document}"
`;

exports[`Texfile endpoint shifts titles and only titles 1`] = `
"\\\\documentclass[contentType]{zmdocument}

\\\\usepackage{blindtext}
\\\\title{The Title}
\\\\author{FØØ, Bär}
\\\\licence[/tmp/l/by-nc-sa.svg]{CC-BY-NC-SA}{https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode}

\\\\smileysPath{/tmp/s}
\\\\makeglossaries

\\\\begin{document}
\\\\maketitle
\\\\tableofcontents

\\\\levelThreeTitle{myTitle}

\\\\begin{LevelOneIntroduction}
myIntro
\\\\end{LevelOneIntroduction}


\\\\end{document}"
`;

exports[`Texfile endpoint transform quizzes for document 1`] = `
"\\\\documentclass[contentType]{zmdocument}

\\\\usepackage{blindtext}
\\\\title{The Title}
\\\\author{FØØ, Bär}
\\\\licence[/tmp/l/by-nc-sa.svg]{CC-BY-NC-SA}{https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode}

\\\\smileysPath{/tmp/s}
\\\\makeglossaries

\\\\begin{document}
\\\\maketitle
\\\\tableofcontents

\\\\begin{Neutral}[{{What is true?}}]
\\\\begin{itemize}
\\\\item\\\\relax true
\\\\item\\\\relax false
\\\\end{itemize}
\\\\end{Neutral}


\\\\begin{Spoiler}[{{Correction}}]
\\\\begin{itemize}
\\\\item\\\\relax true
\\\\item\\\\relax false
\\\\end{itemize}
\\\\end{Spoiler}

\\\\end{document}"
`;
